--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                         <a href="#!" class="projects_btn">
                             <i class="fas fa-eye"></i> preview
                         </a>
-                        <a href="#!" class="projects_btn">
+                        <a href="https://corya-m.github.io/CoryA.M-Landing-Page.github.io/" class="projects_btn">
                             <i class="fab fa-github"></i> Github
                         </a>
                     </div>
