--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 
             <div class="projects_items">
                 <div class="projects_item">
-                    <img src="" alt="My Project">
+                    <img src="Screenshot 2022-12-17 131612.png" alt="My Project">
                     <div class="projects_btns">
                         <a href="https://corya-m.github.io/CoryA.M-Landing-Page.github.io/" class="projects_btn">
                             <i class="fas fa-eye"></i> preview
