--- a/projects.html
+++ b/projects.html
@@ -49,10 +49,10 @@
                 <div class="projects_item">
                     <img src="Screenshot 2022-12-17 131612.png" alt="My Project">
                     <div class="projects_btns">
-                        <a href="https://corya-m.github.io/CoryA.M-Landing-Page.github.io/" class="projects_btn">
+                        <a href="https://corya-m.github.io/CoryA.M-Landing-Page.github.io/" class="projects_btn" target="_blank">
                             <i class="fas fa-eye"></i> preview
                         </a>
-                        <a href="https://github.com/CoryA-M/CoryA.M-Landing-Page.github.io" class="projects_btn">
+                        <a href="https://github.com/CoryA-M/CoryA.M-Landing-Page.github.io" class="projects_btn" target="_blank">
                             <i class="fab fa-github"></i> Github
                         </a>
                     </div>
