--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                 <div class="projects_item">
                     <img src="" alt="My Project">
                     <div class="projects_btns">
-                        <a href="#!" class="projects_btn">
+                        <a href="https://portfolio9557.wordpress.com" class="projects_btn">
                             <i class="fas fa-eye"></i> preview
                         </a>
                         <a href="#!" class="projects_btn">
