--- a/projects.html
+++ b/projects.html
@@ -58,12 +58,12 @@
                     </div>
                 </div>
                 <div class="projects_item">
-                    <img src="" alt="My Project">
+                    <img src="Screenshot 2023-03-05 213359.png" alt="My Project">
                     <div class="projects_btns">
                         <a href="https://portfolio9557.wordpress.com" class="projects_btn">
                             <i class="fas fa-eye"></i> preview
                         </a>
-                        <a href="#!" class="projects_btn">
+                        <a href="https://portfolio9557.wordpress.com" class="projects_btn">
                             <i class="fab fa-github"></i> Github
                         </a>
                     </div>
