--- a/projects.html
+++ b/projects.html
@@ -60,10 +60,10 @@
                 <div class="projects_item">
                     <img src="Screenshot 2023-03-05 213359.png" alt="My Project">
                     <div class="projects_btns">
-                        <a href="https://portfolio9557.wordpress.com" class="projects_btn">
+                        <a href="https://portfolio9557.wordpress.com" class="projects_btn" target="_blank">
                             <i class="fas fa-eye"></i> preview
                         </a>
-                        <a href="https://portfolio9557.wordpress.com" class="projects_btn">
+                        <a href="https://portfolio9557.wordpress.com" class="projects_btn" target="_blank">
                             <i class="fab fa-github"></i> Github
                         </a>
                     </div>
